02/07/24 : Frist idea
03/07/24 : Menggenerasikan password dengan sederhana (huruf kecil & angka)
04/07/24 : Menggenerasikan password dengan sederhana (huruf kecil, besar, angka dan simbol)
05/07/24 : Mengkategorikan tipe password yang diiingin kan user (checkbox h.besar, kecil angka, simbol), dan pertama kali up github