@@ -2,3 +2,10 @@
 03/07/24 : Menggenerasikan password dengan sederhana (huruf kecil & angka)
 04/07/24 : Menggenerasikan password dengan sederhana (huruf kecil, besar, angka dan simbol)
 05/07/24 : Mengkategorikan tipe password yang diiingin kan user (checkbox h.besar, kecil angka, simbol), dan pertama kali up github
+06/07/24 : Menghilangkan button bikin dan menggantikanya dengan otomatis Menggenerasikan passwordnya tanpa meneekan tombol "generete!". Memperbarui mekanisma centang (saat halaman di muat semua kecentang)
+07/07/24 :
+08/07/24 :
+
+
+
+"Projek simpel mingguan."
